2008-07-07  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (arm_fix_adjustable): Don't adjust MOVW/MOVT
	relocations. 

2008-07-07  Ralf Corsépius  <ralf.corsepius@rtems.org>

	* configure.tgt: Add bfin-*-rtems*.

2008-07-04  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-spu.c (md_apply_fix): Handle fully resolved
	BFD_RELOC_32_PCREL, BFD_RELOC_SPU_HI16 and BFD_RELOC_SPU_LO16.

2008-06-25  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (parse_cpu): Handle -m464.
	(md_show_usage): Likewise.

2008-06-24  Eric B. Weddington  <eric.weddington@atmel.com>

	Add support for ATtiny13A.
	* config/tc-avr.c (mcu_types): Add attiny13a.
	* doc/c-avr.texi: Likewise.

2008-06-24  Bob Wilson  <bob.wilson@acm.org>
	    Alan Modra  <amodra@bigpond.net.au>

	* write.c (relax_segment <rs_org>): Include current stretch
	value when calculating whether .org is backwards.

2008-06-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.

2008-06-17  Nick Clifton  <nickc@redhat.com>

	* app.c (do_scrub_chars): Do not UNGET an EOF value.

2008-06-16  Hans-Peter Nilsson  <hp@bitrange.com>

	PR gas/6607
	* config/tc-mmix.c (s_loc): Assume "negative" addresses belong to
	text_section.  Do the "stepping backwards" test for text_section
	using unsigned operands.

2008-06-13  Peter Bergner  <bergner@vnet.ibm.com>

	* config/tc-ppc.c (ppc_cpu): Use ppc_cpu_t typedef.
	(ppc_insert_operand): Likewise.
	(ppc_machine): Likewise.
	* config/tc-ppc.h: #include "opcode/ppc.h"
	(struct _ppc_fix_extra <ppc_cpu>): Use ppc_cpu_t typedef.
	(ppc_cpu): Update extern decl.

2008-06-12  Adam Nemet  <anemet@caviumnetworks.com>

	* config/tc-mips.c (validate_mips_insn): Handle field descriptors
	+x, +X, +p, +P, +s, +S.
	(mips_ip): Likewise.

	* config/tc-mips.c (validate_mips_insn): Handle field descriptor +Q.
	(mips_ip): Likewise.
	(macro_build): Likewise.
	(CPU_HAS_SEQ): New macro.
	(macro2) <M_SEQ_I, M_SNE_I>: Use it.  Emit seq/sne and seqi/snei.
